--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,8 +1,8 @@
 column_width = 120
-line_endings = "unix"
-indent_type = "spaces"
+line_endings = "Unix"
+indent_type = "Spaces"
 indent_width = 2
-quote_style = "auto_prefer_double"
-call_parentheses = "none"
+quote_style = "AutoPreferDouble"
+call_parentheses = "None"
 
 
